[project]
name = "comfyui-multigpu"
description = "This extension adds CUDA device selection to supported loader nodes in ComfyUI. By monkey-patching ComfyUI’s memory management, each model component (like UNet, Clip, or VAE) can be loaded on a specific GPU. Examples included are multi-GPU workflows for SDXL, FLUX, LTXVideo, and Hunyuan Video for both standard and GGUF loader nodes."
version = "1.0.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/pollockjj/ComfyUI-MultiGPU"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "pollockjj"
DisplayName = "ComfyUI-MultiGPU"
Icon = ""
